--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,43 +1,31 @@
-name: Build Android APK
-
-on:
-  push:
-    branches:
-      - main
-
+name: Build APK
+on: push
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      
+      - uses: actions/setup-node@v3
         with:
           node-version: '18'
-
-      - name: Install Dependencies
-        run: npm install
-
-      - name: Create Android Project
-        run: |
-          npx cap add android
-          npx cap sync
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
+          
+      - run: npm install
+      - run: npx cap add android
+      - run: npx cap sync
+      
+      - uses: actions/setup-java@v3
         with:
           distribution: 'zulu'
           java-version: '17'
-
-      - name: Build APK
+          
+      - name: Build Command
         run: |
           cd android
           chmod +x gradlew
           ./gradlew assembleDebug
-
-      - name: Upload APK
-        uses: actions/upload-artifact@v3
+          
+      - uses: actions/upload-artifact@v3
         with:
           name: xpense-app
           path: android/app/build/outputs/apk/debug/app-debug.apk
