--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,8 +11,8 @@ jobs:
       - run: npx cap add android
       - run: npx cap sync
       - uses: actions/setup-java@v4
-        with: { distribution: 'zulu', java-version: '17' }
+        with: { distribution: 'zulu', java-version: '21' }
       - name: Build Android
-        run: cd android && chmod +x gradlew && ./gradlew assembleDebug
+        run: cd android && chmod +x gradlew && ./gradlew assembleDebug --stacktrace
       - uses: actions/upload-artifact@v4
         with: { name: xpense-app, path: android/app/build/outputs/apk/debug/app-debug.apk }
