Switch to Cloud Mode

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,5 +1,9 @@
 {
   "appId": "com.pixoctic.xpense",
   "appName": "xpense",
-  "webDir": "www"
+  "webDir": "www",
+  "server": {
+    "url": "https://fantastic-kulfi-a8b435.netlify.app",
+    "cleartext": true
+  }
 }
